Fixed scrollbar issue with chatlog

--- a/ChickenScratch/ClientApp/src/app/components/lobby-game/lobby-game.component.scss
+++ b/ChickenScratch/ClientApp/src/app/components/lobby-game/lobby-game.component.scss
@@ -20,6 +20,11 @@
     font-weight: bold;
 }
 
+.chat-log {
+    max-height: 400px;
+    overflow-y: scroll;
+}
+
 .player-list {
     font-size: 2em;
 
